--- a/src/layouts/footer/footer.component.html
+++ b/src/layouts/footer/footer.component.html
@@ -1,21 +1,20 @@
 <footer class="footer">
     <div class="footer-column">
-      <h4>Liên Hệ</h4>
-      <p>0386520230</p>
-      <a href="tel:0386520230">Links</a>
+      <h4> Hệ</h4>
+      <p></p>
+      <a></a>
     </div>
     <div class="footer-column">
       <h4>EazyCao Website</h4>
       <a href="#">Links</a>
-      <!-- Add more links as needed -->
     </div>
     <div class="footer-column">
-      <h4>Sản phẩm</h4>
-      <a href="#">Links</a>
+      <h4>Liên Hệ</h4>
+      <p>0386520230</p>
     </div>
     <div class="footer-column">
-      <h4>Giỏ hàng</h4>
-      <a href="#">Links</a>
+      <h4>Địa Chỉ</h4>
+      <a href="#">Somewhere</a>
     </div>
   </footer>
   
