--- a/src/layouts/navbar/navbar.component.html
+++ b/src/layouts/navbar/navbar.component.html
@@ -18,5 +18,8 @@
   </div>
   <div class="category">
     <h3>Giải Trí</h3>
+    <ul>
+      <li><a href="#">Netflix</a></li>
+    </ul>
   </div>
 </div>
