--- a/src/views/product/product.component.html
+++ b/src/views/product/product.component.html
@@ -4,7 +4,11 @@
   <div class="product-grid">
     <div *ngFor="let product of products" class="product-card">
       <img [src]="product.image || 'assets/default-placeholder.jpg'" [alt]="product.name" class="product-image" />
-      <h3 class="product-title">{{ product.name }}</h3>
+      <h3 class="product-title">
+        <span [routerLink]="['/products', product.id]" style="cursor: pointer; color: rgb(0, 0, 0);">
+          {{ product.name }}
+        </span>
+      </h3>
       <p class="product-description">{{ product.description }}</p>
       <div class="product-price">{{ product.price | currency: 'VND' }}</div>
       <button class="buy-button">Mua</button>
