--- a/src/layouts/main-layout/main-layout.component.scss
+++ b/src/layouts/main-layout/main-layout.component.scss
@@ -3,7 +3,6 @@
   }
   
   .content {
-    margin-left: 200px; // Offset main content by the navbar width
-    width: calc(100% - 200px); // Adjust the width to fill remaining space
-    padding: 20px;
+    margin-left: 225px; // Offset main content by the navbar width
+    width: 84%; // Adjust the width to fill remaining space
   }
