--- a/src/views/product-detail/product-detail.component.html
+++ b/src/views/product-detail/product-detail.component.html
@@ -1,37 +1,37 @@
 <div class="product-detail-container" *ngIf="product">
-    <!-- Breadcrumbs -->
-    <nav class="breadcrumb">
-      <a href="/home">Trang chủ</a> / <a href="/products">Sản phẩm</a> / <span>Chi tiết sản phẩm</span>
-    </nav>
-  
-    <div class="product-main">
-      <!-- Thông tin sản phẩm chính -->
-      <div class="product-image">
-        <img [src]="product.image || 'assets/default-placeholder.jpg'" alt="{{ product.name }}" />
+  <!-- Breadcrumbs -->
+  <nav class="breadcrumb">
+    <a href="/home">Trang chủ</a> / <a href="/products">Sản phẩm</a> / <span>Chi tiết sản phẩm</span>
+  </nav>
+
+  <div class="product-main">
+    <!-- Thông tin sản phẩm chính -->
+    <div class="product-image">
+      <img [src]="product.image || 'assets/default-placeholder.jpg'" alt="{{ product.name }}" />
+    </div>
+    <div class="product-info">
+      <h2>{{ product.name }}</h2>
+      <p class="price">Giá: {{ product.price * 1000 | currency: 'VND' }}</p>
+
+      <div class="quantity">
+        <label>Số Lượng:</label>
+        <input type="number" [(ngModel)]="quantity" min="1" />
       </div>
-      <div class="product-info">
-        <h2>{{ product.name }}</h2>
-        <p class="price">Giá: {{ product.price * 1000 | currency: 'VND' }}</p>
-        
-        <div class="quantity">
-          <label>Số Lượng:</label>
-          <input type="number" [(ngModel)]="quantity" min="1" />
-        </div>
-        
-        <p class="stock">Số Lượng Còn Lại: {{ product.quantity }}</p>
-        <p class="description">{{ product.description }}</p>
-        
-        <!-- Nút chức năng -->
-        <div class="buttons">
-          <button class="favorite-btn">
-            <i class="fas fa-heart"></i>
-          </button>
-          <button class="add-to-cart-btn">
-            Thêm vào <i class="fas fa-shopping-cart"></i>
-          </button>
-        </div>
+
+      <p class="stock">Số Lượng Còn Lại: {{ product.quantity }}</p>
+      <p class="description">{{ product.description }}</p>
+
+      <!-- Nút chức năng -->
+      <div class="buttons">
+        <button class="favorite-btn">
+          <i class="fas fa-heart"></i>
+        </button>
+        <button class="add-to-cart-btn" (click)="addToCart(product.id, quantity)">
+          Thêm vào <i class="fas fa-shopping-cart"></i>
+        </button>
       </div>
     </div>
+  </div>
   
     <!-- Tabs để chuyển đổi -->
     <div class="tabs">
