Sửa lại phân quyền + thêm đường dẫn cho admin

--- a/src/views/cart/cart.component.html
+++ b/src/views/cart/cart.component.html
@@ -54,7 +54,7 @@
           </div>
           <div>
             <span>Tổng giá trị phải thanh toán</span>
-            <span>{{ totalPayable | currency: 'VND' }}</span>
+            <span>{{ totalPrice | currency: 'VND' }}</span>
           </div>
           <div>
             <span>Số dư hiện tại</span>
