--- a/src/views/product-detail/product-detail.component.html
+++ b/src/views/product-detail/product-detail.component.html
@@ -46,7 +46,7 @@
         <div *ngFor="let item of relatedProducts" class="related-product-card">
           <img [src]="item.image" alt="{{ item.name }}" />
           <p>{{ item.name }}</p>
-          <p>{{ item.price | currency: 'VND' }}</p>
+          <p>{{ item.price | currencySuffix }}</p>
         </div>
       </div>
       
