--- a/src/layouts/header/header.component.html
+++ b/src/layouts/header/header.component.html
@@ -28,9 +28,9 @@
               <i class="fas fa-plus-square"  style="color: rgb(17, 193, 37); margin-left: 10px; font-size: 20px;"></i></p>
             </a>
           </li>
-          <li><a [routerLink]="'/user'">Quản lý tài khoản</a></li>
+          <li><a [routerLink]="'/profile'">Quản lý tài khoản</a></li>
           <li><a [routerLink]="'/orders'">Lịch sử đơn hàng</a></li>
-          <li><a [routerLink]="'/fav'">Sản phẩm yêu thích</a></li>
+          <li><a [routerLink]="'/favorites'">Sản phẩm yêu thích</a></li>
           <li><a href="#" (click)="onLogout()">Đăng xuất</a></li>
         </ul>
       </div>
